deploy/prod/~g_v1_namespace_prod-lon-tenant-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: prod-cluster-lon
  labels:
    cluster: prod-cluster-lon
    environment: prod
    geo: uk
    tenant: tenant-a
  name: prod-lon-tenant-a
