deploy/prod/~g_v1_namespace_prod-ny-tenant-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: prod-cluster-ny
  labels:
    cluster: prod-cluster-ny
    environment: prod
    geo: uk
    tenant: tenant-a
  name: prod-ny-tenant-a
