deploy/prod/default_apps_v1_daemonset_prod-lon-datadog.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: prod-cluster-lon
  labels:
    cluster: prod-cluster-lon
    environment: prod
  name: prod-lon-datadog
spec:
  selector:
    matchLabels:
      app: datadog
      cluster: prod-cluster-lon
      environment: prod
  template:
    metadata:
      annotations:
        configsync.gke.io/cluster-name-selector: prod-cluster-lon
      labels:
        app: datadog
        cluster: prod-cluster-lon
        environment: prod
    spec:
      containers:
      - image: httpd
        name: datadog
        ports:
        - containerPort: 80
