deploy/prod/tenant-a_networking.k8s.io_v1_networkpolicy_prod-lon-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: prod-cluster-lon
  labels:
    cluster: prod-cluster-lon
    environment: prod
    geo: uk
    tenant: tenant-a
  name: prod-lon-default-deny-ingress
  namespace: tenant-a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
