deploy/prod/default_constraints.gatekeeper.sh_v1beta1_k8srequiredlabels_prod-ny-ns-must-have-geo.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: prod-cluster-ny
  labels:
    cluster: prod-cluster-ny
    environment: prod
  name: prod-ny-ns-must-have-geo
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Namespace
  parameters:
    labels:
    - key: geo
