deploy/prod/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: prod-cluster-lon
  labels:
    environment: prod
    geo: uk
  name: tenant-a
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: prod-cluster-ny
  labels:
    environment: prod
    geo: uk
  name: tenant-b
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    environment: prod
  name: datadog
spec:
  selector:
    matchLabels:
      app: datadog
      environment: prod
  template:
    metadata:
      labels:
        app: datadog
        environment: prod
    spec:
      containers:
      - image: httpd
        name: datadog
        ports:
        - containerPort: 80
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  labels:
    environment: prod
  name: ns-must-have-geo
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Namespace
  parameters:
    labels:
    - key: geo
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: prod-cluster-lon
  labels:
    environment: prod
    geo: uk
  name: default-deny-ingress
  namespace: tenant-a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: prod-cluster-ny
  labels:
    environment: prod
    geo: uk
  name: default-deny-ingress
  namespace: tenant-b
spec:
  podSelector: {}
  policyTypes:
  - Ingress
